# trail-condition-portal

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  blog_list.md  cloudbuild.staging.yaml  cloudbuild.yaml  docker-compose.experiment.yaml  docker-compose.experiment.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.idx/: dev.nix
api/: serializers.py  views.py
app/: config.py  database.py  main.py  seed.py
app/models/: condition.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  production.py
docs/: 260215-pipeline-simple.md  260215-record-matching-simple.md  260322-test-coverage-notes.md
docs/reports/: 260110-背景デザイン実装の進捗.md  260123-matching-implementation-updates.md  260206-test-coverage-analysis.md  260211-feat-blog-report.md  260211-refactor-model-imports-report.md
documents/: 20260109-MVP進捗状況.md  20260109-フロントエンド完成レポート.md  260101-仕様書.md  260103-プロンプト管理システム変更レポート.md  260103-開発ロードマップ.md  260104-ハッシュベース重複検出実装と進捗レポート.md  260110-ToDos.md  container-networking-and-deployment.md  deployment-guide.md  logo-styling-ideas.md  mobile-ui-improvements.md  pytest.txt  record-matching-algorithm.md  tailwind-basic-cheatsheet.md  背景デザイン構成.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: api.ts  main.css  main.ts  style.css  types.ts
scheduler/: apps.py  jobs.py  scheduler.py  urls.py  views.py
static/: robots.txt  tmpclaude-1c7f-cwd
static/css/: prompt.css  style.css
static/js/: base.js  datatable-filters.js  datatable-ui.js  datatable.js  form.js  prompt-form.js  prompt.js  sidebar.js
templates/: 404.html  500.html  about.html  base.html  privacy.html  robots.txt  site-policy.html  sources.html
templates/admin/: nav_sidebar.html
templates/trail_status/: base.html  blogs.html  detail.html  sources.html  trail_list.html
tests/: check_OGP.py  conftest.py  test_urls.py
tests/config/: test_urls.py
tests/trail_status/: conftest.py  test_config_files.py  test_fetcher.py  test_llm_fee.py  test_pipeline.py  test_prompt_utils.py  test_utils.py
to-dos/: TODOS_og.md
tools/: analyze_reconcilation.py  call_llm.py  create_gstorage_bucket.py  get_ga4_report.py  get_gstorage_dumpfile.py  sample_llm_client.py  upload2gstorage.py  yamareco_poi_search.py
tools/grid/: calc_similarity.py  embedding.py  match_by_mname.py  match_by_tname.py  match_fuzz.py  matching_result.txt  remove_duplicates.py  remove_duplicates_each.py  save_poi.py  search_grid_exact_match.py  search_grid_fuzz.py  yamareco_poi.py  yamareco_typelist.py
trail_status/: admin.py  apps.py  forms.py  signals.py  urls.py  views.py
trail_status/feed_samples/: feed_author_sample.txt  feed_content_0_value_sample.txt  feed_link_sample.txt  feed_parse_sample.py  feed_published_parsed_sample.txt  feed_summary_sample.txt  feed_tags_sample.txt  feed_title_sample.txt
trail_status/fixtures/: 260126-datasources.json  datasources.json
trail_status/migrations/: 0002_datasource_last_checked_at.py  0003_alter_mountaingroup_area_alter_trailcondition_area_and_more.py  0004_alter_datasource_name.py  0005_datasource_description_alter_datasource_data_format.py  0006_datasource_area_name_alter_trailcondition_source_and_more.py  0007_rename_reference_url_trailcondition_reference_url.py  0008_add_trailcondition_scraped_at.py  0008_datasource_content_hash_datasource_last_scraped_at.py  0009_alter_trailcondition_reported_at.py
trail_status/models/: __init__.py  condition.py  feed.py  mountain.py  source.py  utils.py
trail_status/services/: blog_fetcher.py  content_hash.py  db_writer.py  fetcher.py  llm_client.py  llm_stats.py  pipeline.py  prompt_utils.py  schema.py  slack_notifier.py  synchronizer.py  types.py  utils.py
trail_status/templates/: base.html  blogs.html  detail.html  index.html  sources.html  trail_list.html
trail_status/tests/: conftest.py  sample_llm_client.py  sample_schema.py  test_config_files.py  test_db_access.py  test_db_writer.py  test_fetcher.py  test_llm_clients.py  test_llm_config.py  (+2 more)
(+146 files in other folders)
