[project]
name = "trail-condition-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
batch = [
    "google-genai>=1.57.0",
    "httpx>=0.28.1",
    "langsmith>=0.6.2",
    "openai>=2.15.0",
    "rapidfuzz>=3.14.3",
    "sudachidict-core>=20251022",
    "sudachipy>=0.6.10",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "djlint>=1.36.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.9.0",
    "ruff>=0.14.10",
]


[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy"
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["trail_status/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.djlint]
ignore = "H021"
profile = "django"
reformat = true
use_gitignore = true
format_js = true
format_css = true
indent = 2
